--- a/src/main/webapp/App/css/view/diaofazhishi/main.css
+++ b/src/main/webapp/App/css/view/diaofazhishi/main.css
@@ -262,22 +262,26 @@ a.cbule5:visited {
 .hide {
   display: none;
 }
+.imgWrap {
+  position: relative;
+/*height 640px*/
+}
 .bgPictureShow {
-  position: absolute;
-  height: 800px;
+  position: relative;
   min-width: 1080px;
+  height: 100%;
   left: 0;
   top: 0;
+  overflow-y: hidden;
   z-index: -1;
 }
 .bgPictureShow .picUl img {
-  height: 800px;
   width: 100%;
 }
 .imgPos {
-  position: fixed;
-  left: 98%;
-  top: 150px;
+  position: absolute;
+  top: 100px;
+  right: 30px;
   z-index: 2;
 }
 .imgPos li {
@@ -291,15 +295,15 @@ a.cbule5:visited {
   background: url("/App/image/global/indexbg/check.png") !important;
 }
 #wrap {
-  height: 640px;
-  width: 1080px;
+/*height 640px*/
+/*width 1080px*/
   margin: 0 auto;
 }
 .navbox {
   margin: 0 auto;
   font-size: 18px;
   line-height: 36px;
-  color: #d8943a;
+  color: #e6b06e;
   min-width: 1080px;
   background-color: #006039;
 }
@@ -308,7 +312,7 @@ a.cbule5:visited {
   height: 100%;
   float: left;
   cursor: pointer;
-  color: #d8943a;
+  color: #e6b06e;
   position: relative;
 }
 .navig:hover {
@@ -334,36 +338,26 @@ a.cbule5:visited {
   display: block;
   width: 100%;
   height: 100%;
-  color: #d8943a;
-  text-decoration: none;
-}
-.headNavWrap li .lit {
-  position: absolute;
-  display: none;
-  width: 120px;
-}
-.headNavWrap li .lit a {
-  text-shadow: 1px 1px 0 #000;
-  line-height: 26px;
-  height: 26px;
-  display: block;
-  color: #fff;
-  font-size: 14px;
+  color: #e6b06e;
   text-decoration: none;
 }
 .navbox .mainNav {
   width: 250px;
   margin-right: 20px;
 }
-.navbox li:hover {
-  background-color: #00482c;
+.headNav li:hover {
+  color: #e6b06e;
+/*border-bottom 1px solid #E6B06E*/
+  background-color: #032613;
 }
 .footerInfo {
   background-color: #006039;
-  color: #d8943a;
+  color: #e6b06e;
   min-width: 1080px;
-  height: 40px;
+  height: 30px;
+  line-height: 30px;
   margin: 0 auto;
+  font-size: 12px;
 }
 .headMain {
   width: 100%;
@@ -401,6 +395,7 @@ a.cbule5:visited {
   position: absolute;
   left: 78%;
   top: 80px;
+  z-index: 2;
 }
 .headMain .headRightHide .weixinHide {
   display: none;
@@ -418,6 +413,7 @@ a.cbule5:visited {
   min-width: 1080px;
   background-color: #00482c;
   margin: 0 auto;
+  font-size: 16px;
 }
 .headNavWrap {
   height: 100%;
@@ -426,9 +422,11 @@ a.cbule5:visited {
 }
 .headSubDiv {
   width: 100%;
-  height: 200px;
+  height: 210px;
   display: none;
   position: absolute;
+  top: 117px;
+  left: 0;
   z-index: 2;
 }
 .headSubDivWrap {
@@ -438,16 +436,16 @@ a.cbule5:visited {
 }
 .headSubContent {
   color: #fff;
-  width: 800px;
+  width: 600px;
   height: 100%;
   margin: 0 auto;
 }
 .headSubNavTile {
-  width: 100%;
+  width: 150px;
   margin: 10px 5px;
   height: 30px;
   float: left;
-  cursor: pointer;
+/*cursor pointer*/
   border-bottom: solid 1px #fff;
 }
 .headSubNavTile a {
@@ -456,19 +454,19 @@ a.cbule5:visited {
   height: 26px;
   display: block;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   text-decoration: none;
 }
 .headSubNavTile a:hover {
-  color: #d8943a;
-  background-color: transparent;
+  color: #e6b06e;
+  background-color: none;
 }
 .headSubNav {
   float: left;
   width: 250px;
   height: 100%;
   margin-right: 80px;
-  margin-top: 30px;
+  margin-top: 8px;
 }
 .headSubImg {
   float: left;
@@ -480,6 +478,8 @@ a.cbule5:visited {
 }
 #wrap {
   height: 100%;
+  width: 1080px;
+  margin: 0 auto;
 }
 .content-img {
   position: relative;
@@ -496,6 +496,8 @@ a.cbule5:visited {
 }
 .content-main-nav .content-main-nav-wrap {
   position: absolute;
+  top: 0;
+  left: 0;
   margin: 0 auto;
   width: 540px;
 }
