--- a/src/main/webapp/App/view/diaofazixun/tpl/xinwendongtai.html
+++ b/src/main/webapp/App/view/diaofazixun/tpl/xinwendongtai.html
@@ -2,8 +2,8 @@
 	<ul>
 		<@$.each(data, function(i, v){@>
 		<@var id = v.id;@>
-		<@var href = '#!chanpinzixun/'+v.id;@>
-		<li id=<@=id@> >
+		<@var href = '#!xinwendongtai/'+v.id;@>
+		<li id=<@=id@> class='list_items'>
 			<a href=<@=href@> >
 				<div class="list-item-wrap">
 				<span><@=v.title@></span>
@@ -14,6 +14,6 @@
 		<@})@>
 	</ul>
 </div>
-<div id="pagination">
+<div id="xw_pagination">
 
 </div>
