--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -192,22 +192,26 @@ a.cttt:hover
 .f16px
 	font-size: 16px 
 .hide
-	display: none 
+	display: none
+.imgWrap
+	position relative
+	/*height 640px*/
 .bgPictureShow
-	position: absolute
-	height: 800px
+	position relative
 	min-width 1080px
+	height 100%
 	left 0
 	top 0
+	overflow-y hidden
 	z-index -1
 	.picUl
 		img
-			height: 800px
 			width 100%
+
 .imgPos
-	position fixed
-	left 98%
-	top 150px
+	position absolute
+	top 100px
+	right 30px
 	z-index 2
 	li
 		display: block
@@ -218,14 +222,14 @@ a.cttt:hover
 .img_active
 	background: url('/App/image/global/indexbg/check.png') !important
 #wrap
-	height 640px
-	width 1080px
+	/*height 640px*/
+	/*width 1080px*/
 	margin 0 auto
 .navbox
 	margin 0 auto
 	font-size: 18px
 	line-height: 36px
-	color: #d8943a
+	color: #E6B06E
 	min-width: 1080px
 	background-color: #006039
 
@@ -234,7 +238,7 @@ a.cttt:hover
 	height: 100%
 	float left
 	cursor pointer
-	color: #D8943A
+	color: #E6B06E
 	position relative
 .navig:hover
 	background-color: #00482c
@@ -252,31 +256,23 @@ a.cttt:hover
 		display block
 		width 100%
 		height 100%
-		color: #D8943A
+		color: #E6B06E
 		text-decoration none
-	.lit
-		position absolute
-		display none
-		width 120px
-		a
-			text-shadow: 1px 1px 0 #000000
-			line-height: 26px
-			height: 26px
-			display: block
-			color: #fff
-			font-size: 14px
-			text-decoration none
 .navbox .mainNav
 	width 250px
 	margin-right 20px
-.navbox li:hover
-	background-color: #00482c
+.headNav li:hover
+	color: #E6B06E
+	/*border-bottom 1px solid #E6B06E*/
+	background-color: #032613
 .footerInfo
 	background-color: #006039
-	color: #D8943A
+	color: #E6B06E
 	min-width: 1080px
-	height: 40px
+	height: 30px
+	line-height 30px
 	margin: 0 auto
+	font-size 12px
 .headMain
 	width 100%
 	margin 0 auto
@@ -319,17 +315,20 @@ a.cttt:hover
 .headNav
 	height 36px
 	min-width 1080px
-	background-color: #00482c
+	background-color #00482c
 	margin 0 auto
+	font-size 16px
 .headNavWrap
 	height 100%
 	width 800px
 	margin 0 auto
 .headSubDiv
 	width 100%
-	height 200px
+	height 210px
 	display none
 	position absolute
+	top 117px
+	left 0
 	z-index 2
 .headSubDivWrap
 	position relative
@@ -337,15 +336,15 @@ a.cttt:hover
 	height 100%
 .headSubContent
 	color #fff
-	width 800px
+	width 600px
 	height 100%
 	margin 0 auto
 .headSubNavTile
-	width 100%
+	width 150px
 	margin 10px 5px
 	height: 30px
 	float left
-	cursor pointer
+	/*cursor pointer*/
 	border-bottom solid 1px #fff
 	a
 		text-shadow: 1px 1px 0 #000000
@@ -353,17 +352,17 @@ a.cttt:hover
 		height: 26px
 		display: block
 		color: #fff
-		font-size: 18px
+		font-size: 16px
 		text-decoration none
 	a:hover
-		color: #d8943a
-		background-color: transparent;
+		color #E6B06E
+		background-color none
 .headSubNav
 	float left
 	width 250px
 	height 100%
 	margin-right 80px
-	margin-top 30px
+	margin-top 8px
 .headSubImg
 	float left
 	width 200px
