--- a/src/main/webapp/App/css/view/admin/main.styl
+++ b/src/main/webapp/App/css/view/admin/main.styl
@@ -24,7 +24,7 @@
 		width 160px
 		float left
 		font-size 16px
-		color #d8943a
+		color #E6B06E
 	.productMore
 		float right
 		height 40px
@@ -48,7 +48,9 @@
 .contentNews,.contentProduct,.contentJoin
 	width 100%
 	height 360px
-	position: absolute
+	position absolute
+	top 0
+	left 0
 .news
 	width 100%
 	height 180px
@@ -58,7 +60,7 @@
 		width 160px
 		float left
 		font-size 16px
-		color #d8943a
+		color #E6B06E
 	.newsMore
 		float right
 		height 40px
