--- a/src/main/webapp/App/css/view/diaofajianshang/main.styl
+++ b/src/main/webapp/App/css/view/diaofajianshang/main.styl
@@ -1,11 +1,17 @@
 #wrap
 	height 100%
+	min-width 1080px
+	margin 0 auto
 .content-img
 	width 100%
-	height 600px
+	position relative
+	/*height 600px*/
 	.content-main-nav
 		width 180px
 		height 600px
+		position fixed
+		top 0
+		left 0
 		float left
 		.content-main-nav-wrap
 			.content-main-nav-item
@@ -18,17 +24,11 @@
 				cursor pointer
 			.clicked
 				background-color #898000
-	.content-img-wrap
-		width 900px
-		height 600px
-		float left
-		img
-			width 100%
-			height 100%
 .content-main
 	.peidaiyanshi-main
 		height 600px
 		width 900px
+		margin 0 auto
 		background-color #fff
 	.peidaiyanshi-introduction
 		float left
@@ -58,7 +58,3 @@
 		width 100%
 .content-wrap
 	position relative
-#peidaiyanshi-main
-	position absolute
-	top 0
-	left 180px
