--- a/src/main/webapp/App/css/view/diaofashishang/main.styl
+++ b/src/main/webapp/App/css/view/diaofashishang/main.styl
@@ -1,91 +1,78 @@
-.content
-	height 660px
-	min-width 1080px
-	overflow-y hidden
-.contentWrap
-	margin-top 480px
-.contentDiv
-	width: 260px
-	height: 180px
-	float: left
-	margin: 0 5px
-	position: relative
-	overflow: hidden
-	img
+#wrap
+	height 100%
+	width 100%
+	background-color #303030
+.content-wrap
+	margin 0 auto
+	.content-img-wrap
+		margin 0 auto
+		height 640px
+.content-img-item
+	float left
+	width 25%
+	height 100%
+	position relative
+	cursor pointer
+	.content-img-item-mask
+		display block
+		position absolute
+		top 0
+		left 0
+		height 100%
 		width 100%
-		height 180px
-
-.productInfo
-	width 100%
-	height 180px
-	color #fff
-	.pruductTitle
-		height 40px
-		width 160px
+		background-color #000
+		opacity 0.5
+.fc-content-wrap
+	height 660px
+	width 1080px
+	margin 0 auto
+	.fc-content-left
 		float left
-		font-size 16px
-		color #d8943a
-	.productMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.productList
-		height 140px
-		width 260px
-		float left
-		.productListImg
-			height 80px
-			width 80px
+		width 65%
+		height 100%
+		.fc-left-up
+			float left
+			height 400px
+			width 98%
+			position relative
 			margin 5px
-			background-color: #e27c79
+		.fc-left-dleft
 			float left
-		.productListSummary
-			height 120px
-			width 160px
-			text-align center
+			height 240px
+			width 33%
+			position relative
+			margin 5px
+		.fc-left-dright
 			float left
-.contentNews,.contentProduct,.contentJoin
-	width 100%
-	height 360px
-	position: absolute
-.news
-	width 100%
-	height 180px
-	color #fff
-	.newsTitle
-		height 40px
-		width 160px
+			height 240px
+			width 63%
+			position relative
+			margin 5px
+	.fc-content-right
 		float left
-		font-size 16px
-		color #d8943a
-	.newsMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.newsList
-		height: 140px;
-		width: 260px;
-		float: left;
-		ul li
-			margin-top 10px
-			a
-				color #fff
-			.listTitle
-				display inline-block
-				width 150px
-				height 20px
-				overflow hidden
-			.listDate
-				display inline-block
-				float right
-.joinUs
+		width 33%
+		height 640px
+		margin 5px
+		.fc-content-right-wrap
+			position relative
+			height 100%
+			width 100%
+.fc-word-mask
+	position absolute
+	height 50px
 	width 100%
-	height 180px
-	color #fff
-	.joinUsTitle
-		height 40px
-		width 120px
-		float left
-		background-color: #ed2
+	bottom 0
+	left 0
+	background-color #000
+	opacity .5
+.fc-words
+	position absolute
+	bottom  0
+	left 0
+	text-align left
+	padding 0 30px
+	font-size 14px
+	line-height 25px
+	height 50px
+	overflow hidden
+	color #eee
