--- a/src/main/webapp/App/css/view/diaofazhishi/main.styl
+++ b/src/main/webapp/App/css/view/diaofazhishi/main.styl
@@ -1,5 +1,7 @@
 #wrap
 	height 100%
+	width 1080px
+	margin 0 auto
 .content-img
 	position relative
 	img
@@ -14,6 +16,8 @@
 
 	.content-main-nav-wrap
 		position absolute
+		top 0
+		left 0
 		margin 0 auto
 		width 540px
 		.content-main-nav-item
