--- a/src/main/webapp/App/css/view/diaofazixun/main.styl
+++ b/src/main/webapp/App/css/view/diaofazixun/main.styl
@@ -1,4 +1,7 @@
-
+#wrap
+	height 640px
+	width 1080px
+	margin 0 auto
 .content
 	.content-main
 		height 450px
@@ -15,18 +18,6 @@
 				float left
 		.actived
 			display block
-		.content-detail-list
-			height 400px
-			li
-				height 40px
-				line-height 40px
-				text-align left
-				padding-left 50px
-				font-weight bold
-				.list-item-wrap
-					color #123
-					.item-right
-						float right
 	.content-nav
 		height 50px
 		width 1080px
@@ -44,4 +35,44 @@
 				background-color: #034F2B
 			.clicked
 				background-color: #898000
-				
+.content-xinwendongtai-right
+	.content-detail-list
+		height 386px
+		padding-left 50px
+		li
+			height 30px
+			line-height 30px
+			text-align left
+			font-weight bold
+			font-size 14px
+			list-style-type square
+			.list-item-wrap
+				color #123
+				.item-right
+					float right
+.content-chanpinzixun-left
+	.content-detail-list
+		height 386px
+		padding-right 50px
+		li
+			height 30px
+			line-height 30px
+			text-align left
+			font-weight bold
+			font-size 14px
+			list-style-type square
+			.list-item-wrap
+				color #123
+				.item-right
+					float right
+#xw_pagination
+	margin-left 50px
+	border-top 1px dashed #111
+#cp_pagination
+	margin-right 50px
+	border-top 1px dashed #111
+.pagination
+	.current
+		color orange
+	a, .prev, .next
+		color #333
