--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -1,13 +1,16 @@
 .content
-	height 640px
+	/*height 640px*/
+	bottom 0
 	min-width 1080px
 	overflow-y hidden
+	margin-top -160px
 .contentWrap
-	margin-top 480px
-
+	height 160px
+	width 1080px
+	margin 0 auto
 .contentDiv
 	width: 260px
-	height: 180px
+	height: 160px
 	float: left
 	margin: 0 5px
 	position: relative
@@ -15,92 +18,119 @@
 	img
 		width 100%
 		height 180px
-
 .productInfo
 	width 100%
 	height 180px
 	color #fff
+	padding 0 10px
 	.pruductTitle
 		height 40px
+		line-height 40px
+		text-align left
 		width 160px
 		float left
 		font-size 16px
-		color #d8943a
+		color #E6B06E
 	.productMore
 		float right
 		height 40px
+		line-height 40px
+		text-align right
 		width 80px
-		font-size 18px
+		font-size 16px
 	.productList
 		height 140px
-		width 260px
+		width 240px
+		margin-top 15px
 		float left
 		.productListImg
 			height 80px
 			width 80px
-			margin 5px
+			margin-right 20px
 			float left
 			background: url('/App/image/global/logo/diaofashishang.jpg') no-repeat center;
 		.productListSummary
 			height 120px
-			width 160px
-			text-align center
+			width 140px
+			text-align left
 			float left
+			font-size 14px
+			a:hover
+				text-decoration underline
 
 .contentNews,.contentProduct,.contentJoin
 	width 100%
 	height 360px
 	position: absolute
+	top 0
+	left 0
 .news
 	width 100%
 	height 180px
 	color #fff
+	padding 0 10px
 	.newsTitle
 		height 40px
+		line-height 40px
 		width 160px
 		float left
 		font-size 16px
-		color #d8943a
+		color #E6B06E
+		text-align left
 	.newsMore
 		float right
 		height 40px
+		line-height 40px
+		text-align right
 		width 80px
-		font-size 18px
+		font-size 16px
 	.newsList
 		height: 140px;
-		width: 260px;
+		width: 240px;
 		float: left;
+		font-size 14px
 		ul li
-			margin-top 10px
+			margin-top 4px
+			text-align left
 			a
 				color #fff
+
 			.listTitle
 				display inline-block
 				width 150px
 				height 20px
 				overflow hidden
+			.listTitle:hover
+					text-decoration underline
+
 			.listDate
 				display inline-block
 				float right
+				font-size 12px
 .joinUs
 	width 100%
 	height 180px
 	color #fff
+	padding 0 10px
 	.joinUsTitle
 		height 40px
+		line-height 40px
+		text-align left
 		width 180px
 		font-size 16px
-		color #d8943a
+		color #E6B06E
 	.joinUsIntroduction
 		height 80px
-		width 260px
 		text-align left
+		font-size 14px
 	.hotTelphone
-		color #898000
-		font-size 18px
+		color #E6B06E
+		font-size 16px
+		text-align left
 .videoFrame
 	position absolute
 	top 100px
+	left 0
 	height 500px
 	width 520px
 	margin 0 auto
