--- a/src/main/webapp/App/css/view/product/main.styl
+++ b/src/main/webapp/App/css/view/product/main.styl
@@ -24,7 +24,7 @@
 		width 160px
 		float left
 		font-size 16px
-		color #d8943a
+		color #D3AB68
 	.productMore
 		float right
 		height 40px
@@ -49,6 +49,8 @@
 	width 100%
 	height 360px
 	position: absolute
+	top 0
+	left 0
 .news
 	width 100%
 	height 180px
@@ -58,7 +60,7 @@
 		width 160px
 		float left
 		font-size 16px
-		color #d8943a
+		color #D3AB68
 	.newsMore
 		float right
 		height 40px
