--- a/src/main/webapp/App/css/view/zoujindsn/main.styl
+++ b/src/main/webapp/App/css/view/zoujindsn/main.styl
@@ -1,5 +1,9 @@
 #wrap
 	background-color rgb(238,238,238)
+	height 800px
+	width 1080px
+	margin 0 auto
+
 .content-left
 	float left
 	width 220px
@@ -29,12 +33,12 @@
 		.catalog-item-in
 			height 55px
 			width 120px
-			border-bottom 1px solid #eee
+			border-bottom 1px solid
 			margin 0 auto
 	.item-atived
 		background-color rgb(137, 128, 0)
 		.catalog-item-in
-			border-bottom none
+			border-bottom none  #eee !important
 .content-article
 	display none
 	padding 40px
@@ -52,21 +56,24 @@
 .content-main-head
 	height 45px
 	border-bottom 1px solid #ddd
+	margin-bottom 33px
 .introduction-company
 	font-size 20px
 	text-align left
 	color #898000
-	line-height 60px
 .introduction-company-eng
 	font-size 14px
 	text-align left
 	color #898000
-	margin-bottom 10px
-.introduction tr td
-	font-size 14px
-	text-align left
-	color #333
-	line-height 30px
+	margin-top 10px
+	margin-bottom 20px
+.introduction
+	margin-bottom 20px
+	tr td
+		font-size 14px
+		text-align left
+		color #333
+		line-height 30px
 #cooperation-support,#cooperation-line,#cooperation-standard,#cooperation-return
 	width 125px
 	float left
@@ -89,6 +96,6 @@
 			.cooperation-click
 				color #898000
 .brand-introduction-img, .movies
-	height 400px
-	width 640px
-	margin 20px auto
+	/*height 400px*/
+	/*width 640px*/
+	/*margin 20px auto*/
