--- a/src/main/webapp/App/view/diaofajianshang/tpl/tpl.html
+++ b/src/main/webapp/App/view/diaofajianshang/tpl/tpl.html
@@ -7,14 +7,15 @@
 				<div class="content-main-nav-item" id="peidaiyanshi" style="border: none">佩戴演示</div>
 			</div>
 		</div>
-		<div class="content-img-wrap">
-			<img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>
-		</div>
+		<!--<div class="content-img-wrap">-->
+			<!--<img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>-->
+		<!--</div>-->
 
 	</div>
 	<div class="content-main">
 		<div class="content-main-article" id="zengbudiaofa-main">
 			<div class="article-introduction">
+				<img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa1.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa2.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa3.jpg" alt=""/>
@@ -23,9 +24,11 @@
 		</div>
 		<div class="content-main-article" id="shishangdiaofa-main">
 			<div class="article-introduction">
-				<img src="/App/image/view/diaofajianshang/zengbudiaofa1.jpg" alt=""/>
+				<img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa2.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa3.jpg" alt=""/>
+				<img src="/App/image/view/diaofajianshang/zengbudiaofa1.jpg" alt=""/>
+
 			</div>
 		</div>
 		<div class="content-main-article" id="peidaiyanshi-main">
