Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -263,10 +263,9 @@ a.cttt:hover
 	margin-right 20px
 .headNav li:hover
 	color: #E6B06E
-	/*border-bottom 1px solid #E6B06E*/
 	background-color: #032613
 .footerInfo
-	background-color: #006039
+	background-color: #00482c
 	color: #E6B06E
 	min-width: 1080px
 	height: 30px
@@ -368,4 +367,4 @@ a.cttt:hover
 	width 200px
 	height 100%
 	img
-		margin-top: 20px
+		margin-top 40px
