--- a/src/main/webapp/App/view/zoujindsn/tpl/tpl.html
+++ b/src/main/webapp/App/view/zoujindsn/tpl/tpl.html
@@ -5,7 +5,12 @@
 				<img src="/App/image/view/joinus/brand.jpg" alt=""/>
 			</div>
 			<div class="catalog-items">
-				<div class="catalog-item  item-atived" id="pinpaijianjie">
+                <div class="catalog-item  item-atived" id="jiamenghezuo">
+                    <div class="catalog-item-in">
+                        加盟合作
+                    </div>
+                </div>
+				<div class="catalog-item " id="pinpaijianjie">
 					<div class="catalog-item-in">
 						品牌简介
 					</div>
@@ -15,11 +20,7 @@
 						品牌影片
 					</div>
 				</div>
-				<div class="catalog-item " id="jiamenghezuo">
-					<div class="catalog-item-in">
-						加盟合作
-					</div>
-				</div>
+
 				<div class="catalog-item " id="lianxiwomen">
 					<div class="catalog-item-in">
 						联系我们
