--- a/src/main/webapp/App/view/diaofajianshang/tpl/tpl.html
+++ b/src/main/webapp/App/view/diaofajianshang/tpl/tpl.html
@@ -1,8 +1,15 @@
 <div class="content-wrap">
 	<div class="content-img">
 		<div class="content-main-nav">
+            <div class="diaofajianshang-nav-wrap-mask">
+                <div class="content-main-nav-mask-item clicked" id="zhubozaoxingmask"></div>
+                <div class="content-main-nav-mask-item" id="zengbudiaofamask"></div>
+                <div class="content-main-nav-mask-item" id="shishangdiaofamask"></div>
+                <div class="content-main-nav-mask-item" id="peidaiyanshimask"></div>
+            </div>
 			<div class="content-main-nav-wrap">
-				<div class="content-main-nav-item clicked" id="zengbudiaofa">增补雕发</div>
+                <div class="content-main-nav-item clicked" id="zhubozaoxing">主播造型</div>
+                <div class="content-main-nav-item" id="zengbudiaofa">增补雕发</div>
 				<div class="content-main-nav-item" id="shishangdiaofa">时尚雕发</div>
 				<div class="content-main-nav-item" id="peidaiyanshi" style="border: none">佩戴演示</div>
 			</div>
@@ -13,13 +20,20 @@
 
 	</div>
 	<div class="content-main">
+        <div class="content-main-article" id="zhubozaoxing-main">
+            <div class="article-introduction">
+                <img src="/App/image/view/diaofajianshang/zengbudiaofa2.jpg" alt=""/>
+                <img src="/App/image/view/diaofajianshang/zengbudiaofa1.jpg" alt=""/>
+                <img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>
+                <img src="/App/image/view/diaofajianshang/zengbudiaofa3.jpg" alt=""/>
+            </div>
+        </div>
 		<div class="content-main-article" id="zengbudiaofa-main">
 			<div class="article-introduction">
-				<img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>
+                <img src="/App/image/view/diaofajianshang/zengbudiaofa3.jpg" alt=""/>
+                <img src="/App/image/view/diaofajianshang/diaofajianshang.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa1.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa2.jpg" alt=""/>
-				<img src="/App/image/view/diaofajianshang/zengbudiaofa3.jpg" alt=""/>
-
 			</div>
 		</div>
 		<div class="content-main-article" id="shishangdiaofa-main">
@@ -28,7 +42,6 @@
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa2.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa3.jpg" alt=""/>
 				<img src="/App/image/view/diaofajianshang/zengbudiaofa1.jpg" alt=""/>
-
 			</div>
 		</div>
 		<div class="content-main-article" id="peidaiyanshi-main">
