--- a/src/main/webapp/App/view/zoujindsn/tpl/tpl.html
+++ b/src/main/webapp/App/view/zoujindsn/tpl/tpl.html
@@ -2,7 +2,7 @@
 	<div class="content-left">
 		<div class="catalog-list">
 			<div class="catalog-head">
-				<img src="/App/image/view/joinus/brand.jpg" alt=""/>
+				<img src="/App/image/view/joinus/brand.png" alt=""/>
 			</div>
 			<div class="catalog-items">
                 <div class="catalog-item  item-atived" id="jiamenghezuo">
@@ -40,7 +40,7 @@
 	<div class="content-right">
 		<div id="pinpaijianjie-main" class="content-article" style="display: block">
 			<div class="content-main-head">
-				<div class="content-head-title">品牌介绍</div>
+				<div class="content-head-title">品牌简介</div>
 				<span class="content-head-title-eng">BRAND INTRODUCTION</span>
 
 			</div>
@@ -180,7 +180,7 @@
 						</tr>
 						<tr>
 							<td>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</td>
-							<td>：&nbsp;&nbsp;518000@qq.com</td>
+							<td>：&nbsp;&nbsp;12897237@qq.com</td>
 						</tr>
 					</table>
 				</div>
