--- a/src/main/webapp/App/css/global/external.css
+++ b/src/main/webapp/App/css/global/external.css
@@ -39,3 +39,30 @@
 .fc-word-mask{
 	filter: alpha(opacity=0.5);
 }
+.content-main-nav-wrap-mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0 auto;
+    width: 640px;
+    height: 50px;
+    opacity: 0.8;
+    filter: alpha(opacity = 80);
+    background-color: #094424
+}
+.content-main-nav-wrap-mask .clicked {
+    background-color: #8A7C0C!important;
+}
+.diaofajianshang-nav-wrap-mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0 auto;
+    opacity: 0.8;
+    filter: alpha(opacity = 80);
+    background-color: #094424;
+    z-index: -2
+}
+.diaofajianshang-nav-wrap-mask .clicked {
+     background-color: #8A7C0C!important;
+ }
