--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -209,7 +209,7 @@ a.cttt:hover
 			width 100%
 .imgPos
 	position absolute
-	top 100px
+	top 210px
 	right 30px
 	z-index 2
 	li
@@ -217,10 +217,10 @@ a.cttt:hover
 		cursor: pointer
 		height: 16px
 		width: 16px
-		background: url('/App/image/global/indexbg/6.png')
+		margin: 8px 0
+		background: url('/App/image/global/indexbg/5.png') no-repeat
 .img_active
-	background: url('/App/image/global/indexbg/5.png') !important
-
+	background: url('/App/image/global/indexbg/6.png') no-repeat !important
 #wrap
 	/*height 640px*/
 	/*width 1080px*/
@@ -285,13 +285,13 @@ a.cttt:hover
 		margin-left 100px
 		float left
 	.headRight
-		width 230px
-		height: 60px
+		width 11.8%
+		height 33.2%
 		position absolute
-		left 78%
+		left 81%
 		top 30px
 		.leaveMsg,.weixin,.email
-			width 72px
+			width 33%
 			height 36px
 			float: left
 			cursor pointer
@@ -311,6 +311,7 @@ a.cttt:hover
 			display none
 			width 180px
 			height 40px
+			padding-top 21px
 .headNav
 	height 36px
 	min-width 1080px
