--- a/src/main/webapp/App/css/view/contactUs/main.css
+++ b/src/main/webapp/App/css/view/contactUs/main.css
@@ -280,7 +280,7 @@ a.cbule5:visited {
 }
 .imgPos {
   position: absolute;
-  top: 100px;
+  top: 210px;
   right: 30px;
   z-index: 2;
 }
@@ -289,10 +289,11 @@ a.cbule5:visited {
   cursor: pointer;
   height: 16px;
   width: 16px;
-  background: url("/App/image/global/indexbg/6.png");
+  margin: 8px 0;
+  background: url("/App/image/global/indexbg/5.png") no-repeat;
 }
 .img_active {
-  background: url("/App/image/global/indexbg/5.png") !important;
+  background: url("/App/image/global/indexbg/6.png") no-repeat !important;
 }
 #wrap {
 /*height 640px*/
@@ -374,16 +375,16 @@ a.cbule5:visited {
   float: left;
 }
 .headMain .headRight {
-  width: 230px;
-  height: 60px;
+  width: 11.8%;
+  height: 33.2%;
   position: absolute;
-  left: 78%;
+  left: 81%;
   top: 30px;
 }
 .headMain .headRight .leaveMsg,
 .headMain .headRight .weixin,
 .headMain .headRight .email {
-  width: 72px;
+  width: 33%;
   height: 36px;
   float: left;
   cursor: pointer;
@@ -406,6 +407,7 @@ a.cbule5:visited {
   display: none;
   width: 180px;
   height: 40px;
+  padding-top: 21px;
 }
 .headNav {
   height: 36px;
