--- a/src/main/webapp/App/css/view/diaofajianshang/main.css
+++ b/src/main/webapp/App/css/view/diaofajianshang/main.css
@@ -280,7 +280,7 @@ a.cbule5:visited {
 }
 .imgPos {
   position: absolute;
-  top: 100px;
+  top: 210px;
   right: 30px;
   z-index: 2;
 }
@@ -289,10 +289,11 @@ a.cbule5:visited {
   cursor: pointer;
   height: 16px;
   width: 16px;
-  background: url("/App/image/global/indexbg/6.png");
+  margin: 8px 0;
+  background: url("/App/image/global/indexbg/5.png") no-repeat;
 }
 .img_active {
-  background: url("/App/image/global/indexbg/5.png") !important;
+  background: url("/App/image/global/indexbg/6.png") no-repeat !important;
 }
 #wrap {
 /*height 640px*/
@@ -374,16 +375,16 @@ a.cbule5:visited {
   float: left;
 }
 .headMain .headRight {
-  width: 230px;
-  height: 60px;
+  width: 11.8%;
+  height: 33.2%;
   position: absolute;
-  left: 78%;
+  left: 81%;
   top: 30px;
 }
 .headMain .headRight .leaveMsg,
 .headMain .headRight .weixin,
 .headMain .headRight .email {
-  width: 72px;
+  width: 33%;
   height: 36px;
   float: left;
   cursor: pointer;
@@ -406,6 +407,7 @@ a.cbule5:visited {
   display: none;
   width: 180px;
   height: 40px;
+  padding-top: 21px;
 }
 .headNav {
   height: 36px;
@@ -475,10 +477,15 @@ a.cbule5:visited {
 .headSubImg img {
   margin-top: 40px;
 }
+.navbox {
+  position: fixed;
+  z-index: 10;
+}
 #wrap {
   height: 100%;
   min-width: 1080px;
   margin: 0 auto;
+  padding-top: 140px;
 }
 .content-img {
   width: 100%;
@@ -493,17 +500,20 @@ a.cbule5:visited {
   left: 0;
   float: left;
 }
-.content-img .content-main-nav .content-main-nav-wrap .content-main-nav-item {
+.content-img .content-main-nav .content-main-nav-mask-item {
   width: 180px;
-  height: 200px;
-  background-color: #0c4e32;
+  float: left;
   color: #eee;
-  font-size: 20px;
-  line-height: 200px;
+  font-size: 16px;
+  height: 50px;
   cursor: pointer;
 }
-.content-img .content-main-nav .content-main-nav-wrap .clicked {
-  background-color: #898000;
+.content-img .content-main-nav .content-main-nav-wrap .content-main-nav-item {
+  width: 180px;
+  color: #eee;
+  font-size: 16px;
+  line-height: 50px;
+  cursor: pointer;
 }
 .content-main .peidaiyanshi-main {
   height: 600px;
