--- a/src/main/webapp/App/css/view/diaofajianshang/main.styl
+++ b/src/main/webapp/App/css/view/diaofajianshang/main.styl
@@ -1,7 +1,11 @@
+.navbox
+  position fixed
+  z-index 10
 #wrap
 	height 100%
 	min-width 1080px
 	margin 0 auto
+	padding-top 140px
 .content-img
 	width 100%
 	position relative
@@ -13,17 +17,20 @@
 		top 0
 		left 0
 		float left
+		.content-main-nav-mask-item
+			width 180px
+			float left
+			color #eee
+			font-size 16px
+			height 50px
+			cursor pointer
 		.content-main-nav-wrap
 			.content-main-nav-item
 				width 180px
-				height 200px
-				background-color #0C4E32
 				color #eee
-				font-size 20px
-				line-height 200px
+				font-size 16px
+				line-height 50px
 				cursor pointer
-			.clicked
-				background-color #898000
 .content-main
 	.peidaiyanshi-main
 		height 600px
