--- a/src/main/webapp/App/css/view/diaofazhishi/main.css
+++ b/src/main/webapp/App/css/view/diaofazhishi/main.css
@@ -280,7 +280,7 @@ a.cbule5:visited {
 }
 .imgPos {
   position: absolute;
-  top: 100px;
+  top: 210px;
   right: 30px;
   z-index: 2;
 }
@@ -289,10 +289,11 @@ a.cbule5:visited {
   cursor: pointer;
   height: 16px;
   width: 16px;
-  background: url("/App/image/global/indexbg/6.png");
+  margin: 8px 0;
+  background: url("/App/image/global/indexbg/5.png") no-repeat;
 }
 .img_active {
-  background: url("/App/image/global/indexbg/5.png") !important;
+  background: url("/App/image/global/indexbg/6.png") no-repeat !important;
 }
 #wrap {
 /*height 640px*/
@@ -374,16 +375,16 @@ a.cbule5:visited {
   float: left;
 }
 .headMain .headRight {
-  width: 230px;
-  height: 60px;
+  width: 11.8%;
+  height: 33.2%;
   position: absolute;
-  left: 78%;
+  left: 81%;
   top: 30px;
 }
 .headMain .headRight .leaveMsg,
 .headMain .headRight .weixin,
 .headMain .headRight .email {
-  width: 72px;
+  width: 33%;
   height: 36px;
   float: left;
   cursor: pointer;
@@ -406,6 +407,7 @@ a.cbule5:visited {
   display: none;
   width: 180px;
   height: 40px;
+  padding-top: 21px;
 }
 .headNav {
   height: 36px;
@@ -475,10 +477,15 @@ a.cbule5:visited {
 .headSubImg img {
   margin-top: 40px;
 }
+.navbox {
+  position: fixed;
+  z-index: 2;
+}
 #wrap {
   height: 100%;
   width: 1080px;
   margin: 0 auto;
+  padding-top: 140px;
 }
 .content-img {
   position: relative;
@@ -491,27 +498,33 @@ a.cbule5:visited {
   height: 50px;
   position: absolute;
   bottom: 0;
-  left: 270px;
+  left: 220px;
+}
+.content-main-nav .content-main-nav-mask-item {
+  width: 160px;
+  height: 50px;
+  float: left;
+  background-color: #094424;
+  color: #eee;
+  font-size: 16px;
+  line-height: 50px;
+  cursor: pointer;
 }
 .content-main-nav .content-main-nav-wrap {
   position: absolute;
   top: 0;
   left: 0;
   margin: 0 auto;
-  width: 540px;
+  width: 640px;
 }
 .content-main-nav .content-main-nav-wrap .content-main-nav-item {
-  width: 180px;
+  width: 160px;
   float: left;
-  background-color: #094424;
   color: #eee;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 50px;
   border-right: 1px dashed #eee;
   cursor: pointer;
-}
-.content-main-nav .content-main-nav-wrap .clicked {
-  background-color: #8a7c0c;
 }
 .content-main-article {
   display: none;
