--- a/src/main/webapp/App/view/diaofazhishi/tpl/tpl.html
+++ b/src/main/webapp/App/view/diaofazhishi/tpl/tpl.html
@@ -2,8 +2,15 @@
 	<div class="content-img">
 		<img src="/App/image/view/diaofazhishi/dingzhiliucheng.jpg" alt=""/>
 		<div class="content-main-nav">
+            <div class="content-main-nav-wrap-mask">
+                <div class="content-main-nav-mask-item clicked" id="peixunzhongxinmask"></div>
+                <div class="content-main-nav-mask-item" id="jishuguanzhanmask"></div>
+                <div class="content-main-nav-mask-item" id="dingzhiliuchengmask"></div>
+                <div class="content-main-nav-mask-item" id="gongyijianbiemask"></div>
+            </div>
 			<div class="content-main-nav-wrap">
-				<div class="content-main-nav-item clicked" id="jishuguanzhan">技术观瞻</div>
+                <div class="content-main-nav-item clicked" id="peixunzhongxin">培训中心</div>
+                <div class="content-main-nav-item" id="jishuguanzhan">技术观瞻</div>
 				<div class="content-main-nav-item" id="dingzhiliucheng">定制流程</div>
 				<div class="content-main-nav-item" id="gongyijianbie" style="border: none">工艺鉴别</div>
 			</div>
@@ -11,6 +18,30 @@
 
 	</div>
 	<div class="content-main">
+        <div class="content-main-article" id="peixunzhongxin-main">
+            <div class="content-main-head">
+                <div class="content-head-title">培训中心</div><span class="content-head-title-eng">TRAINING CENTER</span>
+            </div>
+            <div class="article-introduction">
+                12这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                ！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！	这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                ！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！	这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！这个技术很牛逼的！
+                这个技术很牛逼的！
+
+            </div>
+        </div>
 		<div class="content-main-article" id="jishuguanzhan-main">
 			<div class="content-main-head">
 				<div class="content-head-title">技术观瞻</div><span class="content-head-title-eng">TECHNICAL VIEW</span>
